@@ -1,7 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-import org.mozilla.fenix.gradle.tasks.GithubDetailsTask
-
 buildscript {
     // This logic is duplicated in the allprojects block: I don't know how to fix that.
     repositories {
@@ -20,6 +18,17 @@ buildscript {
             content {
                 // Improve performance: only check moz maven for mozilla deps.
                 includeGroupByRegex RepoMatching.mozilla
+            }
+        }
+
+        if (ExtraRepositories.mozillaStaging) {
+            maven {
+                name "Mozilla Staging"
+                url "https://maven-default.stage.mozaws.net/maven2"
+                content {
+                    // Improve performance: only check moz maven for mozilla deps.
+                    includeGroupByRegex RepoMatching.mozilla
+                }
             }
         }
 
@@ -59,23 +68,29 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.mozilla.appservices:tooling-nimbus-gradle:${Versions.mozilla_appservices}"
-
-        classpath FenixDependencies.tools_androidgradle
-        classpath FenixDependencies.tools_kotlingradle
+        classpath ComponentsDependencies.tools_androidgradle
+        classpath ComponentsDependencies.tools_kotlingradle
         classpath FenixDependencies.tools_benchmarkgradle
         classpath FenixDependencies.androidx_safeargs
         classpath FenixDependencies.osslicenses_plugin
         classpath "org.mozilla.telemetry:glean-gradle-plugin:${Versions.mozilla_glean}"
-        classpath "org.mozilla.appservices:tooling-nimbus-gradle:${Versions.mozilla_appservices}"
+        classpath "${ApplicationServicesConfig.groupId}:tooling-nimbus-gradle:${ApplicationServicesConfig.version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    // Variables in plugins {} aren't directly supported. Hack around it by setting an
+    // intermediate variable which can pull from FenixDependenciesPlugin.kt and be used later.
+    ext {
+        detekt_plugin = Versions.detekt
+        protobuf_plugin = FenixVersions.protobuf_plugin
+        python_envs_plugin = Versions.python_envs_plugin
+    }
 }
 
 plugins {
-    id("io.gitlab.arturbosch.detekt").version("1.19.0")
+    id("io.gitlab.arturbosch.detekt").version("$detekt_plugin")
 }
 
 allprojects {
@@ -96,6 +111,17 @@ allprojects {
             content {
                 // Improve performance: only check moz maven for mozilla deps.
                 includeGroupByRegex RepoMatching.mozilla
+            }
+        }
+
+        if (ExtraRepositories.mozillaStaging) {
+            maven {
+                name "Mozilla Staging"
+                url "https://maven-default.stage.mozaws.net/maven2"
+                content {
+                    // Improve performance: only check moz maven for mozilla deps.
+                    includeGroupByRegex RepoMatching.mozilla
+                }
             }
         }
 
@@ -135,7 +161,7 @@ allprojects {
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-        kotlinOptions.jvmTarget = "11"
+        kotlinOptions.jvmTarget = "17"
         kotlinOptions.allWarningsAsErrors = true
         kotlinOptions.freeCompilerArgs += [
             "-opt-in=kotlin.RequiresOptIn", "-Xjvm-default=all"
@@ -189,14 +215,14 @@ configurations {
 }
 
 dependencies {
-    ktlint("com.pinterest:ktlint:0.48.2") {
+    ktlint("com.pinterest:ktlint:${Versions.ktlint}") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
     }
 
     detekt project(":mozilla-detekt-rules")
-    detekt "io.gitlab.arturbosch.detekt:detekt-cli:${FenixVersions.detekt}"
+    detekt "io.gitlab.arturbosch.detekt:detekt-cli:${Versions.detekt}"
 }
 
 tasks.register('ktlint', JavaExec) {
@@ -212,6 +238,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "app/src/**/*.kt", "!**/build/**/*.kt", "--baseline=ktlint-baseline.xml"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 tasks.withType(io.gitlab.arturbosch.detekt.Detekt.class).configureEach {
